Fix deprecated new Integer() etc. calls in tests [HZ-4186] (#441)
GitOrigin-RevId: 45b0ff1d438efc0df60ce58a8a1a8a9c863dfabe